# viu

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Config.cmake.in  Dockerfile  LICENSE  README.md  gdb_root.sh  main.cpp  update-alternatives-clang.py  viu  viud  viud.service
examples/mouse/: CMakeLists.txt  device.config  main.cpp  mock.cpp  parse_transfers.py  playback.cpp  proxy.cpp
examples/playback/: CMakeLists.txt  parse_transfers.py  playback_device.cpp  recording_proxy.cpp
src/: assert.cppm  assert_impl.cpp  boost.cppm  error.cppm  format.cppm  format_test.cpp  io.cppm  tickable.cppm  transfer.cppm  transfer_impl.cpp  types.cppm  types_test.cpp  usb.cppm  usb_basic.cppm  usb_basic_impl.cpp  usb_descriptors_test.cpp  usb_device_proxy.cppm  usb_device_proxy_impl.cpp  usb_impl.cpp  usb_mock.cppm  usb_mock_abi.cppm  usb_mock_abi.h  usb_mock_abi.hpp  usb_mock_impl.cpp  usb_mock_test.cpp  usbip_socket.cppm  usbip_socket_impl.cpp  vector.cppm  vector_test.cpp  version.cppm.in  vhci.cppm  vhci_impl.cpp
src/cli/: cli.cppm  cli_impl.cpp
src/client/: client.cppm  client_impl.cpp
src/daemon/: daemon.cppm  daemon_impl.cpp
src/descriptors/: descriptor_classes.cppm  packer.cppm  structs.cppm  traits.cppm  tree.cppm  types.cppm  usb_descriptors.cppm  usb_descriptors_impl.cpp
src/json/: json.cppm  json_impl.cpp
src/json/schema/: bos.schema.json  bos_devcap.schema.json  configuration.schema.json  device.schema.json  endpoint.schema.json  endpoint_companion.schema.json  interface.schema.json  root.schema.json  string.schema.json  superspeed_usb.schema.json  types.schema.json  usb_2_0_extension.schema.json
src/plugin/: catalog.cppm  catalog_loader.cppm  interfaces.cppm
src/test/: CMakeLists.txt  README.md  main.cpp  test_device_config.json
